--- a/files/shadowsocksr.config
+++ b/files/shadowsocksr.config
@@ -16,6 +16,7 @@ config servers
 	option timeout '60'
 	option encrypt_method 'rc4-md5'
 	option protocol 'origin'
+	option protocol_param ''
 	option obfs 'plain'
 	option obfs_param ''
 	option kcp_enable '0'
